--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Projects and Work
-subTitle: Portfolio of Zack LaCanna
+title: Live Your More
+subTitle: Webpage of Mindee Rosen
 ---
